--- a/index.html
+++ b/index.html
@@ -399,13 +399,11 @@
           </div>
         </div>
         <!-- End page header-->
-        <div class="container">
-          <div id="owl-partners" class="owl-carousel">
-            <img src="img/partners/1.png" alt="img" />
-            <img src="img/partners/2.png" alt="img" />
-            <img src="img/partners/3.png" alt="img" />
-            <img src="img/partners/4.png" alt="img" />
-          </div>
+        <div class="container text-center">
+            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/1.png" alt="PlanDay" /></div>
+            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/2.png" alt="GenieBelt" /></div>
+            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/3.png" alt="Trust Pilot" /></div>
+            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/4.png" alt="Spire" /></div>
         </div>
       </section>
       <!-- End partners -->
