--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
         </div>
         <!-- End page header-->
         <div class="container text-center">
-            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/1.png" alt="PlanDay" /></div>
-            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/2.png" alt="GenieBelt" /></div>
-            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/3.png" alt="Trust Pilot" /></div>
-            <div class="col-md-3 col-sm-6 text-center"><img class="img-responsive center-block" src="img/partners/4.png" alt="Spire" /></div>
+            <div class="col-md-3 col-sm-6 text-center"><a href="http://planday.com" target="_blank"><img class="img-responsive center-block" src="img/partners/1.png" alt="PlanDay" /></a></div>
+            <div class="col-md-3 col-sm-6 text-center"><a href="http://geniebelt.com" target="_blank"><img class="img-responsive center-block" src="img/partners/2.png" alt="GenieBelt" /></a></div>
+            <div class="col-md-3 col-sm-6 text-center"><a href="http://trustpilot.com" target="_blank"><img class="img-responsive center-block" src="img/partners/3.png" alt="Trust Pilot" /></a></div>
+            <div class="col-md-3 col-sm-6 text-center"><a href="http://spire.io" target="_blank"><img class="img-responsive center-block" src="img/partners/4.png" alt="Spire" /></a></div>
         </div>
       </section>
       <!-- End partners -->
