email address change

--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
                       2300 København S
                     </li>
 			              <li><i class="fa-li fa fa-phone fa-lg"></i>&nbsp;+45 28 91 60 01</li>
-			              <li><i class="fa-li fa fa-envelope fa-lg"></i><a href="mailto:info@techbbq.dk">info@techbbq.dk</a></li>
+			              <li></li>
+			              <li><i class="fa-li fa fa-envelope fa-lg"></i><a href="mailto:sisse@danban.org">sisse@danban.org</a></li>
 			            </ul>
                 </div>
               </div>
