--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
 								<h1>TechBBQ Cup 2017</h1>
 								<p class="text-large">4-a-side football tournament</p>
                 <div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://eventbrite.com" target="_blank" role="button">Sign Up via Eventbrite</a>
+								<a class="btn btn-blank" href="https://www.eventbrite.com/e/tech-bbq-cup-tickets-33016743970" target="_blank" role="button">Sign Up via Eventbrite</a>
 							</div>
 							<div class="item">
 								<h1>11th June 2017</h1>
 								<p class="text-large">In Copenhagen</p>
 								<div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://eventbrite.com" target="_blank" role="button">Sign Up via Eventbrite</a>
+								<a class="btn btn-blank" href="https://www.eventbrite.com/e/tech-bbq-cup-tickets-33016743970" target="_blank" role="button">Sign Up via Eventbrite</a>
 							</div>
 							<div class="item">
 								<h1>Play football</h1>
 								<p class="text-large">Then drink beer!</p>
 								<div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://eventbrite.com" target="_blank" role="button">Sign Up via Eventbrite</a>
+								<a class="btn btn-blank" href="https://www.eventbrite.com/e/tech-bbq-cup-tickets-33016743970" target="_blank" role="button">Sign Up via Eventbrite</a>
 							</div>
 						</div>
 
